# tum-tb-perception

./: .gitignore  CMakeLists.txt  LICENSE  README.md  download_model.sh  package.xml  requirements.txt  setup.py
config/: class_colors_taskboard.yaml  labels.txt
eurobin_perception/: models.py  utils.py
msg/: BoundingBox.msg  BoundingBoxList.msg  Object.msg  ObjectList.msg
ros/config/: main_config_ros2.rviz  realsense_output.rviz
ros/eurobin_perception/: continuous_cnn_detector_node.py  pose_estimator_node.py
ros/launch/: object_detector.launch  object_detector.launch.py  object_detector_single.launch  pose_estimator.launch  pose_estimator.launch.py  slider_task_solver.launch
ros/scripts/: continuous_cnn_detector_node  pose_estimator_node  single_cnn_detector_node  slider_task_solver_node
ros/tum_tb_perception/: continuous_cnn_detector_node.py  pose_estimator_node.py
src/eurobin_perception/: cnn_image_detector.py  dataset.py  image_detection.py  models.py  pose_estimation.py  utils.py  visualization.py
src/tum_tb_perception/: dataset.py  image_detection.py  pose_estimation.py  visualization.py
tum_tb_perception/: dataset.py  models.py  pose_estimation.py  utils.py
