<?xml version="1.0"?>
<package format="2">
  <name>eurobin_perception</name>
  <version>0.1.0</version>
  <description>Perception libraries for the euRobin taskboard challenge</description>

  <author email="ahmed.abdelrahman@tum.de">Ahmed Abdelrahman</author>
  <maintainer email="ahmed.abdelrahman@tum.de">Ahmed Abdelrahman</maintainer>
  <!-- To be added post-release: -->
  <!-- <url>https://github.com/eurobin-wp1/eurobin_perception</url> -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python3-catkin-pkg</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>rospy</depend>
  <depend>rospkg</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_runtime</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_conversions</depend>

  <export>
  </export>
</package>
